--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="allBg">
             
-    <h2 style="text-align: center;font-family: monospace;font-weight: bolder;font-size: 45px;">Tasbeeh Counter</h2>
+    <h2 style="text-align: center;font-family: monospace;font-weight: bolder;font-size: 45px;color: white;">Tasbeeh Counter</h2>
 
     <div class="Reset_div">
     
